--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js", 
     "server": "nodemon index.js",
     "test": "cross-env NODE_ENV=testing jest --watch --verbose --runInBand --silent",
     "resetdb": "knex migrate:rollback && knex migrate:latest && knex seed:run"
   },
   "dependencies": {
+    "colors": "^1.4.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "knex": "^0.95.11",
+    "morgan": "^1.10.0",
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
